start InputHandler and OutputHandler